docs: describe feature store poc
Co-authored-by: alexeyklimov <35665411+alexeyklimov@users.noreply.github.com>